--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  health: ^3.4.3
+  #flutter_unity_widget: ^4.2.5+1
+  flutter_local_notifications: ^9.2.0
+  flutter_native_splash: ^1.2.3
 
 dev_dependencies:
   flutter_test:
@@ -44,10 +48,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
