--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="usal.jorgecruz.habitr_tfg">
    <application
-        android:label="habitr_tfg"
+        android:label="Habitr"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
