--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,7 @@ dependencies:
   #flutter_unity_widget: ^4.2.5+1
   flutter_local_notifications: ^9.2.0
   flutter_native_splash: ^1.2.3
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
