--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   jdenticon_dart: ^2.0.0
   flutter_svg: ^1.0.3
   flutter_native_splash: ^2.1.1
-
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
