--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_native_splash: ^2.1.1
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  flutter_settings_screens: ^0.3.2-null-safety
 
 
 dev_dependencies:
