--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   flutter_settings_screens: ^0.3.2-null-safety
+  characters: ^1.2.0
 
 
 dev_dependencies:
