--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   bloc: ^8.0.2
   equatable: ^2.0.3
   uuid: ^3.0.6
-  supabase_flutter: ^0.2.12
+  supabase_flutter: any #any will autoupdate
   country_picker: ^2.0.12
   jdenticon_dart: ^2.0.0
   flutter_svg: ^1.0.3
@@ -48,8 +48,9 @@ dependencies:
   characters: ^1.2.0
 
 
+
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
