--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_settings_screens: ^0.3.2-null-safety
   characters: ^1.2.0
-
+  flutter_native_timezone: ^2.0.0 #FIXME: This is probably not needed and may be incompatible with iOS
 
 
 dev_dependencies:
