--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_settings_screens: ^0.3.2-null-safety
   characters: ^1.2.0
   flutter_native_timezone: ^2.0.0 #FIXME: This is probably not needed and may be incompatible with iOS
+  share_plus: ^4.0.4
 
 
 dev_dependencies:
