--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,9 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  health: ^3.4.3
+  health: ^4.3.0
   #flutter_unity_widget: ^4.2.5+1
-  flutter_local_notifications: ^9.2.0
+  flutter_local_notifications: ^13.0.0
   path_provider: ^2.0.9
   path: ^1.8.0
   flutter_bloc: ^8.0.1
@@ -47,7 +47,8 @@ dependencies:
   flutter_settings_screens: ^0.3.2-null-safety
   characters: ^1.2.0
   flutter_native_timezone: ^2.0.0 #FIXME: This is probably not needed and may be incompatible with iOS
-  share_plus: ^4.0.4
+  share_plus: ^6.3.0
+  awesome_aurora_gradient: ^0.3.0+2
 
 
 dev_dependencies:
