Add json_serializable support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,12 @@ dependencies:
   characters: ^1.2.0
   share_plus: ^6.3.0
   awesome_aurora_gradient: ^0.3.0+2
+  json_annotation: ^4.8.0
 
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
