remove stale code

--- a/.gitignore
+++ b/.gitignore
@@ -117,5 +117,5 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+windows/flutter/generated_plugins.cmake
 windows/flutter/generated_plugin_registrant.cc
-.gitignore
