--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,11 @@
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
 		<string>Main</string>
+		<key>NSCameraUsageDescription</key>
+		<string>This app uses your camera to add friends through QRs.</string>
+
+		<key>io.flutter.embedded_views_preview</key>
+		<string>YES</string>
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
