--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,14 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_settings_screens: ^0.3.2-null-safety
   characters: ^1.2.0
-  share_plus: ^6.3.0
+  share_plus: ^6.3.4
   awesome_aurora_gradient: ^0.3.0+2
   json_annotation: ^4.8.0
   fl_chart: ^0.62.0
-
+  qr_flutter: ^4.0.0
+  scan: ^1.6.0
+  image_picker: ^0.8.7+4
+  screenshot: ^1.3.0
 
 dev_dependencies:
   build_runner: ^2.3.3
