--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,6 +42,17 @@
 				</array>
 			</dict>
 		</array>
+		<!-- Permission options for the `mediaLibrary` group -->
+		<key>NSAppleMusicUsageDescription</key>
+		<string>Music!</string>
+		<key>kTCCServiceMediaLibrary</key>
+		<string>media</string>
+		<!-- Permission options for the `camera` group -->
+		<key>NSCameraUsageDescription</key>
+		<string>camera</string>
+		<!-- Permission options for the `photos` group -->
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>photos</string>
 		<key>UISupportedInterfaceOrientations</key>
 		<array>
 			<string>UIInterfaceOrientationPortrait</string>
