--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   scan: ^1.6.0
   image_picker: ^0.8.7+4
   screenshot: ^1.3.0
+  permission_handler: ^10.2.0
+  image_gallery_saver: 1.7.0
 
 dev_dependencies:
   build_runner: ^2.3.3
