begin refactoring into proper modules add flutter_unity_widget dependency and dependency override for supabase add game (will be uploaded on next commit)

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ app.*.symbols
 !/dev/ci/**/Gemfile.lock
 windows/flutter/generated_plugins.cmake
 windows/flutter/generated_plugin_registrant.cc
+android/unityLibrary/
+unity
