--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   health: ^4.3.0
-  #flutter_unity_widget: ^4.2.5+1
+  flutter_unity_widget: ^2022.2.0
   flutter_local_notifications: ^13.0.0
   path_provider: ^2.0.9
   path: ^1.8.0
@@ -37,7 +37,7 @@ dependencies:
   bloc: ^8.0.2
   equatable: ^2.0.3
   uuid: ^3.0.6
-  supabase_flutter: any #any will autoupdate
+  supabase_flutter: ^1.10.4
   country_picker: ^2.0.12
   jdenticon_dart: ^2.0.0
   flutter_svg: ^1.0.3
@@ -55,7 +55,7 @@ dependencies:
   image_picker: ^0.8.7+4
   screenshot: ^1.3.0
   permission_handler: ^10.2.0
-  image_gallery_saver: 1.7.0
+  image_gallery_saver: '^2.0.1'
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -63,6 +63,10 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  webview_flutter: ^4.0.0 
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
